<resources>
    <string name="app_name">parcial_tp3</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="burguermenu">burguerMenu</string>
    <string name="imagebrand">imageBrand</string>
    <string name="imageavatar">imageAvatar</string>
    <string name="perfil">Perfil</string>
    <string name="configuraci_n">Configuración</string>
    <string name="favoritos">Favoritos</string>
    <string name="hola">Hola</string>
    <string name="mart_n">Martín</string>
    <string name="buscador_de_veh_culos">Buscador de vehículos</string>
    <string name="marcas">Marcas</string>
    <string name="ford">Ford</string>
    <string name="notificaciones">Notificaciones</string>
    <string name="generales">Generales</string>
    <string name="modo_oscuro">Modo Oscuro</string>
    <string name="home">Home</string>
    <string name="autos">Autos</string>
    <string name="buscar">Buscar</string>
    <string name="olvid_la_contrase_a">Olvidé la contraseña</string>
</resources>